--- a/06/HW_05.md
+++ b/06/HW_05.md
@@ -53,7 +53,16 @@
 
 **ответ**
 
-`mysqlldump.exe -u root -p --databases sakila --result-file="C:\\sakila_dump.sql"`
+Сначала нужно восстановить базу данных из бекапа
+`mysql -u root -p sakila < sakila_backup.sql`
+
+выполнить команду для сохранения логов `mysqladmin -uroot -p flush-logs`
+скопировать логи в папку с бекапами, в исходном расположении логи необходимо удалить.
+
+Далее нужно выполнить команду, для восстановления данных из лог-файлов
+
+`mysqlbinlog /var/log/mysql/mysql-bin.000002 | mysql -u root -p sakila`
+
 
 3.1* В каких случаях использование реплики будет давать преимущество по сравнению с обычным резервным копированием?
 
