--- a/06/HW_05.md
+++ b/06/HW_05.md
@@ -56,8 +56,9 @@
 Сначала нужно восстановить базу данных из бекапа
 `mysql -u root -p sakila < sakila_backup.sql`
 
-выполнить команду для сохранения логов `mysqladmin -uroot -p flush-logs`
-скопировать логи в папку с бекапами, в исходном расположении логи необходимо удалить.
+Выполнить команду для сохранения логов `mysqladmin -uroot -p flush-logs`
+
+Скопировать логи в папку с бекапами, в исходном расположении логи необходимо удалить.
 
 Далее нужно выполнить команду, для восстановления данных из лог-файлов
 
